# ab-testing-kubernetes

deployment/: ambassador.sh  seldon-core-analytics.sh  seldon-core.sh
services/: Dockerfile.baseline  Dockerfile.model  PrepTimeModel.py  main.py  pyproject.toml
services/models/: model.joblib  model.pkl  model_only.joblib
