[tool.poetry]
name = "services"
version = "0.1.0"
description = ""
authors = ["Selvin Selbaraju <selvinoselbaraju@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
joblib = "^1.1.0"
scikit-learn = "1.0.2"
category-encoders = "^2.5.0"
xgboost = "^1.6.1"
pandas = "^1.0.0"
werkzeug= "2.0.3"
seldon-core = "^1.13.1"
multiprocess = "^0.70.13"
sklearn-pandas = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
